--- a/TextureUnpacker/TextureUnpacker.csproj
+++ b/TextureUnpacker/TextureUnpacker.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="PlistDictionary.cs" />
     <Compile Include="PlistLoad.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -85,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="023-cut.ico" />
+    <Content Include="panda.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
